work/svc/ingress/sampleIngress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /path1
        backend:
          serviceName: node-port1
          servicePort: 8080
      - path: /path2
        backend:
          serviceName: node-port2
          servicePort: 8080
  backend:
    serviceName: node-port0
    servicePort: 8080
